[package]
name = "apple-push"
description = "Apple Push Notification Service (apns) client library"
version = "0.3.0-alpha.1"
authors = ["Jasper Bryant-Greene <jbg@rf.net.nz>"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["network-programming"]
repository = "https://github.com/jbg/apns2-rust"
edition = "2018"

[dependencies]
biscuit = "0.4.2"
bytes = "0.5.2"
failure = "0.1.7"
futures = "0.3.4"
http = "0.2.0"
hyper = "0.13.4"
ring = "0.16.12"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
tokio = "0.2.13"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dev-dependencies]
base64 = "0.12.0"
